--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,13 +13,13 @@ pipeline {
         }
         stage('Test') { 
             steps {
-                // 
+                sh ' echo  "hello"  '
             }
         }
         stage('Deploy') { 
             steps {
-                // 
-            }
+                sh ' echo "hello shraddha" '
+           }
         }
     }
 }
