--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,12 +4,14 @@ pipeline {
         stage('gitclone') { 
             steps {
                 git branch: 'main', credentialsId: 'private_key', url: 'https://github.com/awscloud1/spring-petclinic.git'
-                 sh "./mvnw package"
+                 //sh "./mvnw package"
+                 sh ' cd spring-petclinic '
             }
         }
         stage('maven pakage build') { 
             steps {
                  sh "./mvnw package"
+                 sh ' java -jar target/*.jar '
             }
         }
         stage('Build') { 
