--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
             steps {
                  sh "./mvnw package"
                  sh ' java -jar target/*.jar --server.port=8090 '
-                 deploy contextPath: 'spring-petclinc', war: '**/*.war'
+                 deploy contextPath: 'spring-petclinc', jar: '**/*.jar'
             }
         }
         stage('Build') { 
