--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,8 +9,8 @@ pipeline {
         }
         stage('test') { 
             steps {
-                 sh 'mvn test'
-            }
+                 echo "hello"
+                 }
         }
         stage('maven pakage build') { 
             steps {
