--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
         }
         stage('Docker push') { 
             steps {
-                 sh " eval $(aws ecr get-login --region "$AWS_REGION" --no-include-email) && set -xe && docker push 609352431981.dkr.ecr.us-east-1.amazonaws.com/spring-petclinic:${BUILD_NUMBER}"
+                 sh ' eval $(aws ecr get-login --region "$AWS_REGION" --no-include-email) && set -xe && docker push 609352431981.dkr.ecr.us-east-1.amazonaws.com/spring-petclinic:${BUILD_NUMBER}'
             }
         }
     }
