--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
         }
         stage('Deploy to container'){
            steps{
-                   deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'http://172.31.84.51:8080')], contextPath: 'petclinc', war: 'target/spring-petclinic-2.4.2.jar'
+                   deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'https://172.31.84.51:8080')], contextPath: 'petclinc', war: 'target/spring-petclinic-2.4.2.jar'
            }
        }
     }
