--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,8 @@ pipeline {
         }
         stage('Deploy to container'){
            steps{
-                   deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'https://172.31.84.51:8080')], contextPath: 'petclinc', war: 'target/spring-petclinic-2.4.2.jar'
+                   sh 'docker pull awscloud1/spring-boot'
+                   sh 'docker run -i -t -d -p 8090:8080 awscloud1/spring-boot'
            }
        }
     }
