--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,5 +26,20 @@ pipeline {
                  sh ' eval $(aws ecr get-login --region "$AWS_REGION" --no-include-email) && set -xe && docker push 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}'
             }
         }
+         stage('Run Docker container on Jenkins Agent') {
+             
+            steps 
+			{
+                sh "docker run -d -p 8082:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
+ 
+            }
+        }
+        stage('Run Docker container on remote hosts') {
+             
+            steps {
+                sh "docker -H ssh://ec2-user@172.31.84.51 run -d -p 8082:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
+ 
+            }
+        }
     }
 }
