--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
         stage('Run Docker container on remote hosts') {
              
             steps {
-                sh "docker -l ssh://ec2-user@172.31.84.51 run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
+                sh "docker -h ssh://ec2-user@172.31.84.51 run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
  
             }
         }
