--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent any 
     environment {
         AWS_REGION  = 'us-east-1'
+        PEM-KEY = credentials('pem-key')
     }
     
     stages {
@@ -38,7 +39,7 @@ pipeline {
              
             steps {
                 //sh "docker -h ssh://ec2-user@172.31.84.51 run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
-                sh "ssh -i ${pem-key} ec2-user@172.31.84.51"
+                sh "ssh -i $PEM-KEY ec2-user@172.31.84.51"
                 sh "docker run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
             }
         }
