--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any 
     environment {
         AWS_REGION  = 'us-east-1'
-        PEM-KEY = credentials('pem-key')
+        //PEM-KEY = credentials('pem-key')
     }
     
     stages {
@@ -38,9 +38,10 @@ pipeline {
         stage('Run Docker container on remote hosts') {
              
             steps {
-                //sh "docker -h ssh://ec2-user@172.31.84.51 run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
-                sh "ssh -i $PEM-KEY ec2-user@172.31.84.51"
-                sh "docker run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
+                sh "docker -H ssh://ec2-user@172.31.84.51 run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
+                //sh "ssh -i $PEM-KEY ec2-user@172.31.84.51"
+                //sh " "
+                //sh "docker run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
             }
         }
     }
