--- a/jenkinsfile
+++ b/jenkinsfile
@@ -38,10 +38,9 @@ pipeline {
         stage('Run Docker container on remote hosts') {
              
             steps {
-                sh "docker -H ssh://ec2-user@172.31.84.51 run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
-                //sh "ssh -i $PEM-KEY ec2-user@172.31.84.51"
-                //sh " "
-                //sh "docker run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
+                //sh "docker -H ssh://ec2-user@172.31.84.51 run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
+                withCredentials([sshUserPrivateKey(credentialsId: 'tomcat', keyFileVariable: 'pem-key', usernameVariable: 'ec2-user')])
+                sh "docker run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
             }
         }
     }
