--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             </exclusion>
         </exclusions>
     </dependency>
+    <dependency>
+  <groupId>org.hibernate</groupId>
+  <artifactId>hibernate-core</artifactId>
+  <version>5.0.11.Final</version>
+  <scope>compile</scope>
+</dependency>
 
     <!-- Databases - Uses H2 by default -->
     <dependency>
