--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,17 @@
             </exclusion>
         </exclusions>
     </dependency>
+     <!-- Databases - Uses H2 by default -->
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <scope>runtime</scope>
+    </dependency>
 
     <!-- caching -->
     <dependency>
