--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,8 +33,9 @@ pipeline {
                 //sh "docker -H ssh://ec2-user@172.31.84.51 run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
                 withCredentials([usernameColonPassword(credentialsId: 'tomcat-id', variable: 'tomcat')]) {
     // some block
+                echo"hello"
 }
-                sh "docker run -d -p 8022:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
+                //sh "docker run -d -p 8022:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
             }
         }
     }
