--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,7 +34,7 @@ pipeline {
                 withCredentials([usernameColonPassword(credentialsId: 'tomcat-id', variable: 'tomcat')]) {
     // some block
                 echo"hello"
-                sh " deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'http://172.31.84.51')], contextPath: null, war: '/target/spring-petclinic-2.4.2.jar' "
+                sh " deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'https://172.31.84.51')], contextPath: null, war: '/target/spring-petclinic-2.4.2.jar' "
 }
                 //sh "docker run -d -p 8022:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
             }
