--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,11 +31,11 @@ pipeline {
              
             steps {
                 //sh "docker -H ssh://ec2-user@172.31.84.51 run -d -p 8042:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
-                withCredentials([usernameColonPassword(credentialsId: 'tomcat-id', variable: 'tomcat')]) {
+               // withCredentials([usernameColonPassword(credentialsId: 'tomcat-id', variable: 'tomcat')]) {
     // some block
                 echo"hello"
                 sh " deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'https://172.31.84.51')], contextPath: null, war: '/target/spring-petclinic-2.4.2.jar' "
-}
+//}
                 //sh "docker run -d -p 8022:8082 609352431981.dkr.ecr.us-east-1.amazonaws.com/shraddha-test:${BUILD_NUMBER}"
             }
         }
