--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,7 +41,8 @@ pipeline {
         }
         stage('Docker depoly') { 
             steps {
-               sh " deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'https://172.31.84.51')], contextPath: null, war: '/target/spring-petclinic-2.4.2.jar' "  
+               //sh " deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'https://172.31.84.51:8080')], contextPath: null, war: '/target/spring-petclinic-2.4.2.jar' "  
+               sh " deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'http://172.31.84.51:8080/')], contextPath: 'springpetclinc', war: '**/*.jar' "
             }
         }
     }
