--- a/jenkinsfile
+++ b/jenkinsfile
@@ -42,7 +42,8 @@ pipeline {
         stage('Docker depoly') { 
             steps {
                //sh " deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'https://172.31.84.51:8080')], contextPath: null, war: '/target/spring-petclinic-2.4.2.jar' "  
-               script { deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'https://172.31.84.51:8080/')], contextPath: 'springpetclinc', war: '**/*.jar' }
+               script { deploy adapters: [tomcat9(credentialsId: 'tomcat-id', path: '', url: 'http://172.31.84.51:8080/')], contextPath: 'springpetclinc', war: '/var/lib/jenkins/workspace/simple-test/target/spring-petclinic-2.4.2.jar' }
+               
             }
         }
     }
